--- a/renderer/styles/global.css
+++ b/renderer/styles/global.css
@@ -1,3 +1,17 @@
+html{
+	height: 100%;
+	height: 720px;
+	width: 1280px;
+}
+body{
+	margin: 0;
+	height: 100%;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+.whole{
+	height: 100%;
+}
 ::-webkit-scrollbar{
 	width: 6px;
 }
