--- a/renderer/styles/comment.module.css
+++ b/renderer/styles/comment.module.css
@@ -32,31 +32,15 @@
 	border-radius: 3px;
 	/* text-shadow: 0px 0px 5px #000; */
 }
-@keyframes slide {
-	0% {
-		margin-left: 100%;
-		transform: translateX(0%);
-	}
-	100%{
-		margin-left: 0%;
-		transform: translateX(-100%);
-	}
-}
 .comment {
 	margin-bottom: 0;
-	margin-top: -35px;
 	position: absolute;
-	font-size: 24px;
 	line-height: 1;
 	z-index: 2;
 	color: #fff;
 	text-shadow: -1px -1px #000, 1px -1px #000,	-1px 1px #000, 1px 1px #000;
 	overflow: hidden;
 	white-space: nowrap;
-	animation-name: slide;
-	animation-duration: 10s;
-	animation-timing-function: linear;
-	animation-fill-mode: forwards;
 }
 .p_comment{
 	margin: 0;
@@ -94,4 +78,30 @@
 	border-radius: 20px;
 	-webkit-app-region: no-drag;
 	cursor: pointer;
+}
+@keyframes slide {
+	0% {
+		margin-left: 100%;
+		transform: translateX(0%);
+	}
+	100%{
+		margin-left: 0%;
+		transform: translateX(-100%);
+	}
+}
+@keyframes stop {
+	0% {
+		margin-left: 50%;
+		transform: translateX(-50%);
+	}
+	100%{
+		margin-left: 0%;
+		transform: translateX(-100%);
+	}
+}
+.middle {
+	animation: slide 10s linear forwards;
+}
+.lock {
+	animation: stop 10s step-end forwards;
 }
